# control-panel

./: .coverage  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  control.py  coverage.xml  fix-templates.sh  install.sh  pyproject.toml  reinstall.sh  requirements.txt  setup.py  setup.sh  start.sh  web-service.sh  web_ui.py
control_panel/: __init__.py  cli.py  cli_part2.py  cli_part3.py  merge_cli_parts.py  merge_web_ui_parts.py  web_ui.py  web_ui_part2.py  web_ui_part3.py
control_panel/cli/: __init__.py  completion.py  config_commands.py  management_commands.py  service_commands.py  system_commands.py
control_panel/static/css/: placeholder
control_panel/static/js/: metrics.js  placeholder  toast-manager.js
control_panel/templates/: service-template.service
control_panel/templates/web/: add_range.html  add_service.html  base.html  edit_service.html  index.html  placeholder
control_panel/utils/: config.py  node_helper.py  script_manager.py  service.py  system_metrics.py
examples/: README.md  simple_server.py
static/js/: metrics.js
templates/: service-template.service
templates/web/: add_range.html  add_service.html  base.html  index.html  logs.html
tests/: README.md  conftest.py  test_backup_recovery.py  test_cli_aliases.py  test_cli_completion.py  test_cli_utils.py  test_config.py  test_service.py
utils/: config.py  node_helper.py  service.py  system_metrics.py
